refactor(deps): migrate Jackson from 2.x to 3.1.1
- ObjectMapper → JsonMapper (tools.jackson.databind.json)
- JsonProcessingException → JacksonException (now unchecked)
- TypeReference moved to tools.jackson.core
- jackson-annotations remains on 2.x as per upstream design

Signed-off-by: manticore-projects <andreas@manticore-projects.com>